<resources>
    <string name="app_name">My Links</string>
    <string name="title_group">Groups</string>
    <string name="title_line">Line</string>
    <string name="title_dot">Dot</string>
    <string name="lb_nogoups">No groups created</string>
    <string name="lb_nolinks">No links in the group</string>
    <string name="lb_nogroup">No group is selected</string>
    <string name="lb_nogroupselected">No group is selected, swipe right a required group in Groups</string>
    <string name="ht_groupname">Group name</string>
    <string name="ht_dotname">Link name</string>
    <string name="ht_url">Url</string>
    <string name="ht_description">Description</string>
    <string name="menu_add">Add</string>
    <string name="menu_ok">OK</string>
    <string name="menu_search">Search</string>
    <string name="menu_setup">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="token_title">Auth token</string>
    <string name="mode_title">Sync mode</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync links periodically</string>
    <string name="host_title">Server URL</string>
    <string name="sync_summary_on">Automatically populate new links to Server and other devices
    </string>
    <string name="sync_summary_off">Do not use a synchronization with a server</string>
    <string name="menu_sync">Sync</string>
    <string name="err_invalidurl">Invalid URL</string>
    <string name="lb_search">Search</string>
    <string name="lb_divider">Use a links divider</string>
    <string name="menu_share">Share</string>
    <string name="full_sync_title">Force a full sync</string>
</resources>