<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:summaryOff="@string/sync_summary_off"
            app:summaryOn="@string/sync_summary_on"
            app:title="@string/sync_title" />

        <EditTextPreference
            app:dependency="sync"
            app:key="host"
            app:title="@string/host_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="sync"
            app:key="token"
            app:title="@string/token_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:dependency="sync"
            app:defaultValue="manual"
            app:entries="@array/sync_mode_entries"
            app:entryValues="@array/sync_mode_values"
            app:key="mode"
            app:title="@string/mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>