<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_add"
        android:id="@+id/act_add"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/menu_search"
        android:id="@+id/act_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/menu_ok"
        android:id="@+id/act_done"
        android:icon="@drawable/ic_baseline_done_24"
        app:showAsAction="always"/>

    <item android:title="@string/menu_setup"
        android:id="@+id/act_setup"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never"/>

    <item android:title="@string/menu_sync"
        android:id="@+id/act_sync"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never"/>
</menu>